--- a/React/脚手架/1-发布极简脚手架/react-mini-cli/template/package.json
+++ b/React/脚手架/1-发布极简脚手架/react-mini-cli/template/package.json
@@ -9,8 +9,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^4.4.1",
